--- a/client/src/assets/scss/app.scss
+++ b/client/src/assets/scss/app.scss
@@ -18,6 +18,16 @@ $util-font-sizes: 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 1
   }
 }
 
+@media (min-width: 1400px) {
+    .container-xl,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container {
+        max-width: 1320px;
+    }
+}
+
 // Scaffolding
 // -------------------------
 html {
