update trend chart

--- a/client/src/assets/scss/themes/default/_variables.scss
+++ b/client/src/assets/scss/themes/default/_variables.scss
@@ -21,13 +21,16 @@ $brand-info: #5bc0dd;
 // Measurements
 // -------------------------
 $measurements: (
-    measurement-1: #F6C85F,
-    measurement-2: #CA472F,
-    measurement-3: #FFA056,
-    measurement-4: #0B84A5,
-    measurement-5: #6F4E7C,
-    measurement-6: #9DD866,
-    measurement-7: #8DDDD0,
+    measurement-1: #FF9800,
+    measurement-2: #9DD866,
+    measurement-3: #0B84A5,
+    measurement-4: #F6C85F,
+    measurement-5: #CA472F,
+    measurement-6: #5bc0dd,
+    measurement-7: #FFA056,
+    measurement-8: #8DDDD0,
+    measurement-9: #6F4E7C,
+    measurement-10: #60bf60
 );
 
 
