small UI updates

--- a/client/src/assets/scss/app.scss
+++ b/client/src/assets/scss/app.scss
@@ -418,12 +418,12 @@ textarea {
 
 .stat {
     > .row {
+        &.condensed {
+            padding-right: $spacer;
+        }
+
         .col {
             margin-right: -$spacer;
-
-            &:last-child {
-                margin-right: 0;
-            }
         }
     }
 
